--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,14 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-	# check these on https://fabricmc.net/use
-	minecraft_version=1.16.5
-	yarn_mappings=1.16.5+build.1
-	loader_version=0.11.0
+minecraft_version=1.19.2
+yarn_mappings=1.19.2+build.28
+loader_version=0.14.10
 
 # Mod Properties
-	mod_version = 1.1.2
-	maven_group = net.nubbu2
+	mod_version = 2.0
+	maven_group = xanthian
 	archives_base_name = camera_keybinds
 
 # Dependencies
-	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.29.3+1.16
+fabric_version=0.64.0+1.19.2
