--- a/gradle.properties
+++ b/gradle.properties
@@ -1,15 +1,16 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
+org.gradle.parallel=true
 
 # Fabric Properties
-minecraft_version=1.19.3
-yarn_mappings=1.19.3+build.1
-loader_version=0.14.11
+minecraft_version=1.20.1
+yarn_mappings=1.20.1+build.9
+loader_version=0.14.21
 
 #Fabric api
-fabric_version=0.68.1+1.19.3
+fabric_version=0.85.0+1.20.1
 
 # Mod Properties
-mod_version = 2.1
+mod_version = 2.2
 maven_group = xanthian
 archives_base_name = camera_keybinds
