--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,20 @@
-# Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
-org.gradle.parallel=true
+org.gradle.jvmargs=-Xmx3G
+org.gradle.daemon=false
 
-# Fabric Properties
-minecraft_version=1.20.1
-yarn_mappings=1.20.1+build.9
-loader_version=0.14.21
+minecraft_version=1.19.2
+minecraft_version_range=[1.19.2, 1.20.2]
+forge_version= 43.3.2
+forge_version_range=[43, 48]
+loader_version_range=[43, 48]
+mapping_channel=parchment
+mapping_version=2022.11.27-1.19.2
+forgegradle_version = 6.0.6
 
-#Fabric api
-fabric_version=0.85.0+1.20.1
-
-# Mod Properties
-mod_version = 2.2
-maven_group = xanthian
-archives_base_name = camera_keybinds
+mod_id=camerakeybinds
+mod_name=Perspective Camera Keybinds
+mod_license=GNU GENERAL PUBLIC LICENSE Version 3
+mod_version=1.0
+mod_group_id=net.xanthian.camerakeybinds
+mod_authors=Xanthian
+mod_description=A client-side mod for camera perspective switching keybinds!
+pack_format_number=9
